your local changes

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 </a></li>
         </ul>
     </div>
-    <div class="except-nav" style="margin-top: 50px; margin-bottom: 50px;">
+    <div class="except-nav">
         <h1 style="text-align: center;">个人介绍</h1>
         <div class="oi-card">
             <!-- 头像：替换为你的头像链接（本地图片放同一文件夹直接写文件名，如 avatar.jpg） -->
