--- a/note.html
+++ b/note.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css">
     <title>good1210的博客 --- 大事记</title>
 </head>
+
 <body>
     <div class="nav">
         <ul>
@@ -46,8 +48,10 @@
                 </a></li>
         </ul>
     </div>
-    <div style="border-left-width: 100px;" id="notes">
-        <h3>加载可能较慢，请耐心等待……</h3>
+    <div class="except-nav" data-noecpt>
+        <div class="markdownViewer" id="notes">
+            <h3>加载可能较慢，请耐心等待……</h3>
+        </div>
     </div>
 </body>
 <script type="module">
